# live-vision-analyzer

./: .gitignore  CLAUDE.md  MOONDREAM_MIGRATION_PLAN.md  PHASE_1_IMPLEMENTATION.md  README.md  package-lock.json  package.json  vite.config.ts
src/: App-EventTriggered.tsx  App-Original.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.tauri/: schema.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  moondream_manager.rs  ollama_manager.rs  yolo_detector.rs
src/components/: AutonomousEventDashboard.tsx  EventDashboard.tsx
src/components/ui/: alert.tsx  button.tsx  slider.tsx  switch.tsx  table.tsx  textarea.tsx
src/config/: prompts.ts
src/services/: ContextInferenceEngine.ts  EventMonitor.ts  SupabaseSync.ts
src/types/: analysis.ts  autonomous.ts
